# bmad-ralph-loop

./: .gitignore  CLAUDE.md  PROMPT-code-review.md  PROMPT-create-story.md  PROMPT-dev-story.md  README.md  install.sh  pyproject.toml  run-stories  run-stories.sh
_bmad-output/brainstorming/: brainstorming-session-2026-02-21.md
_bmad-output/implementation-artifacts/: tech-spec-activity-pane-scrolling-textual.md  tech-spec-crash-resilient-orchestration.md  tech-spec-python-tui-story-runner.md
_bmad/_config/: agent-manifest.csv  bmad-help.csv  files-manifest.csv  manifest.yaml
_bmad/_config/ides/: claude-code.yaml
_bmad/_memory/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
run_stories/: PROMPT-code-review.md  README.md  claude_session.py  cli.py  models.py  orchestrator.py  sprint_status.py  stream_parser.py  tui.py
tests/: test_orchestrator.py  test_sprint_status.py  test_stream_parser.py  test_tui.py
