[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "run-stories"
version = "0.1.0"
description = "Python TUI Story Runner for BMAD workflow"
requires-python = ">=3.10"
dependencies = [
    "rich>=14.3.0",
    "textual>=0.80.0",
    "pyyaml>=6.0",
]

[project.scripts]
run-stories = "run_stories.cli:main"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
